--- a/index_eng.html
+++ b/index_eng.html
@@ -11,7 +11,7 @@
     <div class="main">
       <header>
         <nav>
-          <a href="index.html"
+          <a href="index_eng.html"
             ><img src="/images/logo.png" alt="logo" class="logo" id="logo"
           /></a>
           <ul class="nav-list">
